finish all styles

--- a/kinesthetic.html
+++ b/kinesthetic.html
@@ -6,56 +6,59 @@ an experience may be used by other modalities, the key is that the
 student is connected to reality, “either through experience, example, 
 practice or simulation,”.This mode uses many senses (sight, touch, 
 taste and smell) to acquire in the environment to experience and learn 
-new things (Fleming, 2012:1).
+new things (Fleming, 2012:1).</p>
+<p>
 Those with a Kinesthetic preference often discover academic 
 learning difficult because it may be conceptual and abstract when they 
 prefer reality and concrete situations. Those are some kinesthetic 
-strategies in learning:
-1) INTAKE
-Learners who have a strong preference for the Kinesthetic 
-(K) mode should use some or all of the following.
-a) Videos.
-b) Field trips.
-c) Trial and error.
-d) Teaching others.
-e) Demonstrations.
-29
-f) Previous exam papers.
-g) Examples of principles.
-h) Using applied opportunities.
-i) Do things to understand them.
-j) Exhibits, samples, photographs...
-k) Laboratories and practical sessions
-l) Recipes and solutions to problems.
-m) Pictures of real things- photographs.
-n) Listen to teachers who give real-life examples.
-o) Hands-on approaches (computing, laboratories…)
-p) Using all their senses - sight, touch, taste, smell, hearing ...
-q) Collections- rock types, plants, shells, grasses, bones or 
-contracts...
-r) Listen for the examples. They hold the key to understanding 
-the abstract bits.
-2) SWOT (Study without tears)
-To make a learnable package they need to convert their 
-lecture notes by reducing them into things that are concrete and 
-real to them. They should:
-a) Recall the experiments, field trips...
-30
-b) Remember the “real” things that happened.
-c) Talk about their notes with another “K” person.
-d) Use pictures and photographs that illustrate an idea.
-e) Go back to the laboratory or their lab manual or their 
-practical notes.
-f) Use case studies and applications to help with principles and 
-abstract concepts.
-g) Look at their lecture notes. They may be poor because the 
-topics were not 'concrete’ or 'relevant'.
-3) OUTPUT
-To perform well in written examinations they should:
-a) Write practice answers, paragraphs.
-b) Remember they cannot avoid writing.
-c) Recall the experience of previous exams
-d) Role-play the exam situation in their study.
-e) Put plenty of examples into their notes and their 
-answers(Fleming, 2012:69)
-</p>
+strategies in learning:</p>
+<ul>
+    <li>
+        <h6>INTAKE (To take in information)</h6>
+        <p>Learners who have a strong preference for the Kinesthetic (K) mode should use some or all of the following.</p>
+        <ol>
+            <li>Videos.</li>
+            <li>Field trips.</li>
+            <li>Trial and error.</li>
+            <li>Teaching others.</li>
+            <li>Demonstrations.</li>
+            <li>Previous exam papers.</li>
+            <li>Examples of principles.</li>
+            <li>Using applied opportunities.</li>
+            <li>Do things to understand them.</li>
+            <li>Exhibits, samples, photographs...</li>
+            <li>Laboratories and practical sessions</li>
+            <li>Recipes and solutions to problems.</li>
+            <li>Pictures of real things- photographs.</li>
+            <li>Listen to teachers who give real-life examples.</li>
+            <li>Hands-on approaches (computing, laboratories…)</li>
+            <li>Using all their senses - sight, touch, taste, smell, hearing ...</li>
+            <li>Collections- rock types, plants, shells, grasses, bones or contracts...</li>
+            <li>Listen for the examples. They hold the key to understanding the abstract bits.</li>
+        </ol>
+    </li>
+    <li>
+        <h6>SWOT (Study without tears)</h6>
+        <p>To make a learnable package they need to convert their lecture notes by reducing them into things that are concrete and real to them. you should:</p>
+        <ol>
+            <li>Recall the experiments, field trips...</li>
+            <li>Remember the “real” things that happened.</li>
+            <li>Talk about their notes with another “K” person.</li>
+            <li>Use pictures and photographs that illustrate an idea.</li>
+            <li>Go back to the laboratory or their lab manual or their practical notes.</li>
+            <li>Use case studies and applications to help with principles and abstract concepts.</li>
+            <li>Look at their lecture notes. They may be poor because the topics were not 'concrete’ or 'relevant'.</li>
+        </ol>
+    </li>
+    <li>
+        <h6>OUTPUT</h6>
+        <p>To perform well in written examinations they should:</p>
+        <ol>
+            <li>Write practice answers, paragraphs.</li>
+            <li>Remember they cannot avoid writing.</li>
+            <li>Recall the experience of previous exams</li>
+            <li>Role-play the exam situation in their study.</li>
+            <li>Put plenty of examples into their notes and their answers(Fleming, 2012:69)</li>
+        </ol>
+    </li>
+</ul>
