--- a/read.html
+++ b/read.html
@@ -5,59 +5,67 @@ read or written. These learners place importance on the accuracy in
 language and are keen to use quotes, lists, texts, books and manuals. 
 They have a strong reverence for words(Fleming, 2012:1).
 Those with this preference would prefer that a book, a lesson, 
-a text is dense with text and unadorned with fancy fonts and diagrams. 
+a text is dense with text and unadorned with fancy fonts and diagrams. </p>
+<p>
 Those are some read/write strategies in learning:
-1) INTAKE (To take in the information)
-Learners who have a strong preference for Reading and 
-Writing (R) should use some or all of the following:
-26
-a) Lists.
-b) Notes.
-c) Essays.
-d) Reports.
-e) Contracts.
-f) Textbooks.
-g) Glossaries.
-h) Definitions.
-i) Quotations.
-j) Dictionaries.
-k) Printed handouts.
-l) Readings – library.
-m) Laboratory manuals.
-n) Websites and webpages.
-o) Placing meanings in headings.
-p) Taking lecture notes (verbatim).
-q) Computer and other mechanical manuals.
-r) Listening to teachers who use words well and who have lots 
-of information in sentences and notes.
-2) SWOT (Study without tears)
-To make a learnable package they need to reduce their 
-“notes” by using these reading and writing techniques.
-a) Write out the words again and again.
-27
-b) Read their notes (silently) again and again.
-c) Do the “extra” reading requested by the teacher.
-d) Rewrite the ideas and principles into other words.
-e) Organize any diagrams, graphs … into statements e.g. “The 
-trend is…”
-f) Use a word-processor to arrange their ideas and to “play” 
-with words.
-g) Turn reactions, actions, diagrams, links, charts and flow 
-diagrams into words.
-h) Imagine lists arranged in multiple-choice questions and 
-distinguish between them.
-3) OUTPUT
-To perform well in examinations they should:
-a) Write exam answers.
-b) Write practice paragraphs.
-c) Re-order their lists into priority order.
-d) Refer to publications – citing references.
-e) Practice with multiple-choice questions.
-f) Organize written beginnings and endings.
-g) Use their word-processor to prepare answers.
-h) Write their notes into lists (a, b, c , d, 1, 2, 3, 4,).
-i) Arrange their words into hierarchies and bullet points.
-28
-j) Search the Internet for new ideas and confirmation of old 
-ones (Fleming, 2012:64)
 </p>
+<ul>
+    <li>
+        <h6>INTAKE (To take in the information)</h6>
+        <p>Learners who have a strong preference for Reading and Writing (R) should use some or all of the following:</p>
+        <ol>
+            <li>Lists.</li>
+            <li>Notes.</li>
+            <li>Essays.</li>
+            <li>Reports.</li>
+            <li>Contracts.</li>
+            <li>Textbooks.</li>
+            <li>Glossaries.</li>
+            <li>Definitions.</li>
+            <li>Quotations.</li>
+            <li>Dictionaries.</li>
+            <li>Printed handouts.</li>
+            <li>Readings – library.</li>
+            <li>Laboratory manuals.</li>
+            <li>Websites and webpages.</li>
+            <li>Placing meanings in headings.</li>
+            <li>Taking lecture notes (verbatim).</li>
+            <li>Computer and other mechanical manuals.</li>
+            <li>Listening to teachers who use words well and who have lots of information in sentences and notes.</li>
+        </ol>
+    </li>
+    <li>
+        <h6>SWOT (Study without tears)</h6>
+        <p>
+            To make a learnable package they need to reduce their “notes” by using these reading and writing techniques.
+        </p>
+        <ol>
+            <li>Write out the words again and again.</li>
+            <li>Read their notes (silently) again and again.</li>
+            <li>Do the “extra” reading requested by the teacher.</li>
+            <li>Rewrite the ideas and principles into other words.</li>
+            <li>Organize any diagrams, graphs … into statements e.g. “The trend is…”</li>
+            <li>Use a word-processor to arrange their ideas and to “play” with words.</li>
+            <li>Turn reactions, actions, diagrams, links, charts and flow diagrams into words.</li>
+            <li>Imagine lists arranged in multiple-choice questions and distinguish between them.</li>
+        </ol>
+    </li>
+    <li>
+        <h6>OUTPUT</h6>
+        <p>
+            To perform well in examinations they should:
+        </p>
+        <ol>
+            <li>Write exam answers.</li>
+            <li>Write practice paragraphs.</li>
+            <li>Re-order their lists into priority order.</li>
+            <li>Refer to publications – citing references.</li>
+            <li>Practice with multiple-choice questions.</li>
+            <li>Organize written beginnings and endings.</li>
+            <li>Use their word-processor to prepare answers.</li>
+            <li>Write their notes into lists (a, b, c , d, 1, 2, 3, 4,).</li>
+            <li>Arrange their words into hierarchies and bullet points.</li>
+            <li>Search the Internet for new ideas and confirmation of old ones (Fleming, 2012:64)</li>
+        </ol>
+    </li>
+</ul>
