--- a/aural.html
+++ b/aural.html
@@ -5,49 +5,50 @@ which is spoken or heard. Those with endorsement for this modality
 report that they learn best from discussion, oral feedback, email, 
 phone chat, discussion boards, oral presentations, classes, tutorials, 
 and talking with others (Fleming, 2012:1). Those are some aural 
-strategies in learning:
-1) INTAKE (To take in information)
-Learners who have a strong preference for learning by 
-Aural and Oral methods (hearing and speaking) should use some 
-or all of the following.
-a) Explain new ideas to others.
-b) Explain what happened to others.
-c) Discuss topics with other students.
-d) Discuss topics with their teachers.
-24
-e) Use a tape recorder so they can listen again and again.
-f) Attend as many lectures and teaching sessions as they can.
-g) Leave spaces in their lecture notes for later recall and 
-‘filling’.
-h) Attend discussion groups and other opportunities to share 
-ideas with others.
-i) Describe the overheads, pictures and other Visuals to 
-somebody who was not there.
-j) Remember the interesting examples, stories, and jokes that 
-teachers use to explain things.
-2) SWOT (Study without tears)
-To make a learnable package they need to reduce their 
-notes and change them into memorable ways for them to hear. 
-They should:
-a) Read summarized notes aloud.
-b) Explain their notes to another ‘Aural’ person.
-c) Ask others to 'hear' their understanding of a topic.
-d) Talk about their learning to others or to themselves.
-e) Put their summarized notes onto tapes and listen to them.
-f) Their notes from lectures may be poor because they prefer to 
-listen rather than take notes. They will need to expand and
-g) Enhance their notes by talking with others and collecting 
-notes from the textbook.
-25
-3) OUTPUT
-To perform well in examinations they should:
-a) Speak their answers.
-b) Listen to their voices and write them down.
-c) Tune into their teachers talking about the topics.
-d) Spend time in quiet places recalling the big ideas.
-e) Still practice writing answers to old exam questions.
-f) If the system allows it, choose an oral examination of their 
-learning.
-g) Imagine they are talking with the teacher as they write their 
-answers (Fleming, 2012:60).
-</p>
+strategies in learning:</p>
+<ul>
+    <li>
+        <h6>INTAKE (To take in information)</h6>
+        <p>Learners who have a strong preference for learning by Aural and Oral methods (hearing and speaking) should use some  or all of the following.</p>
+        <ol>
+            <li>Explain new ideas to others.</li>
+            <li>Explain what happened to others.</li>
+            <li>Discuss topics with other students.</li>
+            <li>Discuss topics with their teachers.</li>
+            <li>Use a tape recorder so they can listen again and again.</li>
+            <li>Attend as many lectures and teaching sessions as they can.</li>
+            <li>Leave spaces in their lecture notes for later recall and ‘filling’.</li>
+            <li>Attend discussion groups and other opportunities to share ideas with others.</li>
+            <li>Describe the overheads, pictures and other Visuals to somebody who was not there.</li>
+            <li>Remember the interesting examples, stories, and jokes that teachers use to explain things.</li>
+        </ol>
+    </li>
+    <li>
+        <h6>SWOT (Study without tears)</h6>
+        <p>
+            To make a learnable package they need to reduce their notes and change them into memorable ways for them to hear. They should:
+        </p>
+        <ol>
+            <li>Read summarized notes aloud.</li>
+            <li>Explain their notes to another ‘Aural’ person.</li>
+            <li>Ask others to 'hear' their understanding of a topic.</li>
+            <li>Talk about their learning to others or to themselves.</li>
+            <li>Put their summarized notes onto tapes and listen to them.</li>
+            <li>Their notes from lectures may be poor because they prefer to listen rather than take notes. They will need to expand and</li>
+            <li>Enhance their notes by talking with others and collecting notes from the textbook.</li>
+        </ol>
+    </li>
+    <li>
+        <h6>OUTPUT</h6>
+        <p>To perform well in examinations they should:</p>
+        <ol>
+            <li>Speak their answers.</li>
+            <li> Listen to their voices and write them down.</li>
+            <li>Tune into their teachers talking about the topics.</li>
+            <li>Spend time in quiet places recalling the big ideas.</li>
+            <li>Still practice writing answers to old exam questions.</li>
+            <li>If the system allows it, choose an oral examination of their learning.</li>
+            <li>Imagine they are talking with the teacher as they write their answers (Fleming, 2012:60).</li>
+        </ol>
+    </li>
+</ul>
